--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
+    "prod": "vite --mode prod",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build --mode prod",
@@ -23,6 +24,8 @@
     "axios": "^1.7.2",
     "dropzone-vue": "^0.1.11",
     "dropzone-vue3": "^1.0.2",
+    "flowbite": "^2.4.1",
+    "flowbite-vue": "^0.1.5",
     "perfect-scrollbar": "^1.5.5",
     "pinia": "^2.1.7",
     "vazirmatn": "^33.0.3",
