--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vazirmatn": "^33.0.3",
     "vee-validate": "^4.13.1",
     "vue": "^3.4.21",
+    "vue-awesome-sidebar": "^1.2.4",
     "vue-custom-scrollbar": "^1.4.4",
     "vue-router": "^4.3.0",
     "vue-toast-notification": "^3.1.2",
